# cognition-engine

./: .gitignore  CHANGELOG.md  LICENSE  QUICKSTART.md  README.en.md  README.md  VALIDATION_MODEL.md  VALIDATION_STATE_FLOW.md  ce  pyproject.toml
cognition_engine/: README.md  __init__.py  adk_workflow_adapter.py  bootstrap.py  cli.py  daily_flow.py  decision_pack.py  legacy.py  model_enhancement.py  paths.py  product_brief.py  runner.py  workflow.py
cognition_engine/artifacts/: __init__.py  adk_file_artifact_binding.py
cognition_engine/control_plane/: __init__.py  builder.py  records.py
cognition_engine/events/: README.md  __init__.py  event.py  event_trace.py
cognition_engine/formal_entries/: __init__.py  framework_metadata_formal_entry.py
cognition_engine/invocation/: README.md  __init__.py  invocation_context.py
cognition_engine/modeling/: __init__.py  contracts.py  providers.py  runtime.py  smoke.py
cognition_engine/rendering/: __init__.py  generate_outputs.py
cognition_engine/runtime/: README.md  __init__.py  runner.py
cognition_engine/sessions/: README.md  __init__.py  session.py
cognition_engine/workflows/: README.md  __init__.py  workflow.py
docs/releases/: v0.2.0-release-note.md  v0.3.0-release-note.md  v0.3.1-release-note.md  v0.3.2-release-note.md
engine/analyzer/: __init__.py  insight_formal_entry.py
engine/transformer/: README.md  __init__.py  generate_outputs.py
examples/decision-packs/: README.md  runner-centrality.md
examples/product-briefs/: README.md
outputs/: OUTPUT_CONTRACTS.md  README.md
outputs/decision-packs/: README.md
outputs/product-briefs/: README.md
tests/unit/: test_adk_agent_runtime_result_probe.py  test_adk_artifact_probe.py  test_adk_file_artifact_binding.py  test_adk_runtime_probe.py  test_adk_single_agent_structured_output_array_item_type_mismatch_failure_probe.py  (+48 more)
(+12 files in other folders)
